# webfarmd

./: .gitlab-ci.yml  README.md  pyproject.toml  webfarmd.example.yaml
tests/: context.py  test_ad.py  test_site.py
webfarmd/: __init__.py  cli.py  queue_daemon.py  server.py
webfarmd/drivers/: ad.py  idp.py  letsencrypt.py  mysql.py  slack.py  ssh.py  ssl.py  templating.py
webfarmd/drivers/software/: phpfpm.py  stackbase.py  wordpress.py
webfarmd/jobs/: groups.py  idp.py  sites.py  tls.py
webfarmd/models/: __init__.py  group.py  site.py  sitedeployment.py  user.py
webfarmd/templates/site/: le_hook.j2  maintenance.html.j2
webfarmd/templates/site/httpd/: location.j2  proxybalancer.j2  site.j2  wafexclusion.j2
webfarmd/templates/site/nginx/: redirect.j2  site.j2
webfarmd/templates/site/nginx/location/: block.j2  internal_only.j2  maintenance.j2  proxy.j2  redirect.j2  standard.j2
webfarmd/templates/site/software/php-fpm/: env.j2  stack.yml.j2
webfarmd/templates/site/software/simplesamlphp/: idp_sp.j2  simplesp.xml.j2
webfarmd/templates/site/software/wordpress/: env.j2  php.ini.j2  stack.yml.j2
